syntax = "proto3";

package zitadel.user.v2alpha;

import "zitadel/options.proto";
import "zitadel/user/v2alpha/user.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/user/v2alpha;user";

service UserService {

  rpc TestGet (TestGetRequest) returns (TestGetResponse) {
    option (google.api.http) = {
      get: "/v2/users/test"
    };
  }

  rpc TestPost (TestPostRequest) returns (TestPostResponse) {
    option (google.api.http) = {
      post: "/v2/users/test"
      body: "*"
    };
  }

  rpc TestAuth (TestAuthRequest) returns (TestAuthResponse) {
    option (google.api.http) = {
      get: "/v2/users/test_auth"
    };

    option (zitadel.v1.auth_option) = {
      permission: "authenticated"
    };
  }
}

message TestGetRequest{
  Context ctx = 1;
}

message TestGetResponse{
  string ctx = 1;
}

message TestPostRequest{
  Context ctx = 1;
}

message TestPostResponse{
  string ctx = 1;
}

message TestAuthRequest{}

message TestAuthResponse{
  User user = 1;
}

message Context {
  oneof ctx {
    bool instance = 1;
    string org_id = 2;
    string org_domain = 3;
  }
}
